@@ -13,3 +13,4 @@ For my assignment I have the additional challenge of extending the tutorial vide
 + Added 404 page
 + No more annoying .php at the end of any file.
 + Timestamps automatically change.
++ Login via username
